<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr8.lab1ui.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:inputType="textCapSentences|textNoSuggestions"
                android:id="@+id/editText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellido"
                android:layout_below="@id/editText"
                android:inputType="textCapSentences|textNoSuggestions"
                android:id="@+id/editText2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/grupo"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sexo"
                    android:id="@+id/textView" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Masculino"
                    android:id="@+id/radioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Femenino"

                    android:id="@+id/radioButton2" />

            </RadioGroup>


            <AutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Pais"
                android:id="@+id/autoCompleteTextView"
                android:layout_below="@id/grupo"
                android:ems="8"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Telefono"
                android:inputType="number"
                android:id="@+id/editText3"
                android:layout_below="@id/autoCompleteTextView"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Direccion"
                android:inputType="textNoSuggestions"
                android:id="@+id/editText4"
                android:layout_below="@id/editText3"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:id="@+id/editText5"
                android:layout_below="@id/editText4"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favorito"
                android:id="@+id/checkBox"
                android:layout_below="@+id/editText5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies"
                android:id="@+id/textView2"
                android:layout_below="@id/checkBox"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_below="@+id/textView2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFecha"
                android:layout_below="@id/spinner"
                android:text="@string/strFecha"
                android:onClick="onClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnFecha"
                android:text="@string/fecha_de_nacimiento"
                android:id="@+id/textView3"/>



        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fillViewport="true"
            android:id="@+id/scroll">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Informacion"
                android:id="@+id/textView4"/>

        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mostrar"
            android:id="@+id/button"
            android:onClick="mostrarInfoContacto"
            android:layout_toRightOf="@+id/scroll"/>
    </RelativeLayout>

</LinearLayout>